# FinanceManagementAPI

./: LICENSE  README.MD  manage.py  pyproject.toml
accounts/: admin.py  models.py
accounts/migrations/: 0001_initial.py  0002_initial.py  0003_alter_account_balance.py
config/: .env.example
currencies/: apps.py  models.py
currencies/migrations/: 0001_initial.py
customers/: admin.py  apps.py  models.py
customers/migrations/: 0001_initial.py
finance_management_api/: asgi.py  config.py  settings.py  urls.py  wsgi.py
transactions/: admin.py  apps.py  models.py
transactions/migrations/: 0001_initial.py
