[tool.poetry]
name = "financemanagementapi"
version = "0.1.0"
description = "Finance Management API"
authors = ["Sergey Udachin <s.udachin@mail.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.4"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
